section animation markup

--- a/index.html
+++ b/index.html
@@ -53,15 +53,44 @@
         </div>
       </div>
 
-      <section id="tv-section">
-        <h1>Enjoy on your TV.</h1>
-        <h2>
-          Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray
-          players, and more.
-        </h2>
+      <section class="main-section">
+        <div id="tv-section">
+          <h1>Enjoy on your TV.</h1>
+          <h2>
+            Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray
+            players, and more.
+          </h2>
 
-        <div class="tv-player">
-          <img src="./images/netflix-enjoy-on-img.png" alt="" />
+          <div class="tv-player">
+            <img src="./images/netflix-enjoy-on-img.png" alt="" />
+            <div class="tv-story-play">
+              <video controls autoplay loop playsinline muted>
+                <source
+                  src="./images/netflix-enjoy-on-tv.m4v"
+                  type="video/mp4"
+                />
+              </video>
+            </div>
+          </div>
+        </div>
+
+        <div id="download-section">
+          <h1>Download your shows to watch offline.</h1>
+          <h2>
+            Save your favorites easily and always have something to watch.
+          </h2>
+
+          <div class="offline-show">
+            <img src="./images/netflix-download-for-offline.jpg" alt="" />
+            <div class="offline-show-play">
+              <div class="offline-show-img">
+                <img src="./images/offline story play.png" alt="" />
+              </div>
+              <div class="offline-show-text">
+                <div id="text">Downloading...</div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
