add mobile stream section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,30 @@
             </div>
           </div>
         </div>
+
+        <div id="watch-everywhere">
+          <h1>Watch everywhere.</h1>
+          <h2>
+            Stream unlimited movies and TV shows on your phone, tablet, laptop,
+            and TV.
+          </h2>
+        </div>
+
+        <div id="kid-profile">
+          <div class="profile-text">
+            <h1>Create profile for kids.</h1>
+            <h2>
+              Send kids on adventures with their favorite characters in a space
+              made just for them—free with your membership.
+            </h2>
+          </div>
+          <img src="./images/netflix-profile-for-kids.png" alt="" />
+        </div>
+
+        <div id="faq">
+          <h1>Frequently Asked Questions</h1>
+          <div class="faq-questions"></div>
+        </div>
       </section>
     </div>
   </body>
