add faq page styles

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
             <!-- question 1 -->
             <article class="question">
               <div class="question-title">
-                <h2>What is Netflix?</h2>
+                <p>What is Netflix?</p>
                 <button type="button" class="question-btn">
                   <span class="plus-icon">
-                    <i class="fa-regular fa-plus"></i>
+                    <i class="fa-solid fa-plus"></i>
                   </span>
                   <span class="cancel-icon">
-                    <i class="fa-regular fa-xmark"></i>
+                    <i class="fa-solid fa-xmark"></i>
                   </span>
                 </button>
               </div>
@@ -145,14 +145,14 @@
 
             <!-- Question 2 -->
             <article class="question">
-              <div class="question-titlw">
-                <h2>How much does Netflix cost?</h2>
+              <div class="question-title">
+                <p>How much does Netflix cost?</p>
                 <button type="button" class="question-btn">
                   <span class="plus-icon">
-                    <i class="fa-regular fa-plus"></i>
+                    <i class="fa-solid fa-plus"></i>
                   </span>
                   <span class="cancel-icon">
-                    <i class="fa-regular fa-xmark"></i>
+                    <i class="fa-solid fa-xmark"></i>
                   </span>
                 </button>
               </div>
@@ -168,14 +168,14 @@
 
             <!-- Question 3 -->
             <article class="question">
-              <div class="question-titlw">
-                <h2>Where can I watch?</h2>
+              <div class="question-title">
+                <p>Where can I watch?</p>
                 <button type="button" class="question-btn">
                   <span class="plus-icon">
-                    <i class="fa-regular fa-plus"></i>
+                    <i class="fa-solid fa-plus"></i>
                   </span>
                   <span class="cancel-icon">
-                    <i class="fa-regular fa-xmark"></i>
+                    <i class="fa-solid fa-xmark"></i>
                   </span>
                 </button>
               </div>
@@ -198,14 +198,14 @@
 
             <!-- Question 4 -->
             <article class="question">
-              <div class="question-titlw">
-                <h2>How do I cancel?</h2>
+              <div class="question-title">
+                <p>How do I cancel?</p>
                 <button type="button" class="question-btn">
                   <span class="plus-icon">
-                    <i class="fa-regular fa-plus"></i>
+                    <i class="fa-solid fa-plus"></i>
                   </span>
                   <span class="cancel-icon">
-                    <i class="fa-regular fa-xmark"></i>
+                    <i class="fa-solid fa-xmark"></i>
                   </span>
                 </button>
               </div>
@@ -222,14 +222,14 @@
 
             <!-- Question 5 -->
             <article class="question">
-              <div class="question-titlw">
-                <h2>What can I watch on Netflix?</h2>
+              <div class="question-title">
+                <p>What can I watch on Netflix?</p>
                 <button type="button" class="question-btn">
                   <span class="plus-icon">
-                    <i class="fa-regular fa-plus"></i>
+                    <i class="fa-solid fa-plus"></i>
                   </span>
                   <span class="cancel-icon">
-                    <i class="fa-regular fa-xmark"></i>
+                    <i class="fa-solid fa-xmark"></i>
                   </span>
                 </button>
               </div>
@@ -246,14 +246,14 @@
 
             <!-- Question 6 -->
             <article class="question">
-              <div class="question-titlw">
-                <h2>Is Netflix good for kids?</h2>
+              <div class="question-title">
+                <p>Is Netflix good for kids?</p>
                 <button type="button" class="question-btn">
                   <span class="plus-icon">
-                    <i class="fa-regular fa-plus"></i>
+                    <i class="fa-solid fa-plus"></i>
                   </span>
                   <span class="cancel-icon">
-                    <i class="fa-regular fa-xmark"></i>
+                    <i class="fa-solid fa-xmark"></i>
                   </span>
                 </button>
               </div>
@@ -274,5 +274,7 @@
         </div>
       </section>
     </div>
+
+    <script src="./index.js"></script>
   </body>
 </html>
