match parent text onclick

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <script src="./index.js" defer></script>
     <title>Netflix Nigeria - Watch TV Shows Online, Watch Movies Online</title>
   </head>
   <body>
@@ -271,6 +270,31 @@
               </div>
             </article>
           </div>
+
+          <h1 class="faq-text">
+            Ready to watch? Enter your email to create or restart your
+            membership.
+          </h1>
+
+          <form action="submit">
+            <div class="form-signup">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                class="form-control"
+                placeholder="Email address"
+                required
+              />
+            </div>
+
+            <div class="form-signup">
+              <button id="submit" type="submit" class="logo-btn">
+                Get Started
+                <i id="chevron" class="fa-solid fa-chevron-right fa-0.6x"></i>
+              </button>
+            </div>
+          </form>
         </div>
       </section>
     </div>
