add footer section/styles

--- a/index.html
+++ b/index.html
@@ -296,6 +296,36 @@
             </div>
           </form>
         </div>
+
+        <footer>
+          <div class="footer-text">
+            <a href="#">Questions? Contact us.</a>
+          </div>
+
+          <div class="footer-column-content">
+            <ul class="grid-content">
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Account</a></li>
+              <li><a href="#">Investor Relations</a></li>
+              <li><a href="#">Ways to Watch</a></li>
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Corporate Information</a></li>
+              <li><a href="#">Speed Test</a></li>
+              <li><a href="#">Only on Netflix</a></li>
+              <li><a href="#">Help Center</a></li>
+              <li><a href="#">Media Center</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Terms of Use</a></li>
+              <li><a href="#">Cookie Preferences</a></li>
+              <li><a href="#">Contact Us</a></li>
+              <li><a href="#">Legal Notices</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-text2">
+            <a href="#">Netflix Nigeria</a>
+          </div>
+        </footer>
       </section>
     </div>
 
